--- a/starter/02-HTML-Fundamentals/index.html
+++ b/starter/02-HTML-Fundamentals/index.html
@@ -7,7 +7,120 @@
     <title>The Basic Language of the Web: HTML</title>
   </head>
   <body>
+    <!--
     <h1>The Basic Language of the Web: HTML</h1>
+    <h2>The Basic Language of the Web: HTML</h2>
+    <h3>The Basic Language of the Web: HTML</h3>
+    <h4>The Basic Language of the Web: HTML</h4>
+    <h5>The Basic Language of the Web: HTML</h5>
+    <h6>The Basic Language of the Web: HTML</h6>
+-->
+    <h1>📘 The Code Magazine</h1>
+    <header>
+      <nav>
+        <a href="blog.html" target="_blank">Blog</a>
+        <a href="#" target="_blank">Challenges</a>
+        <a href="#" target="_blank">Flexbox</a>
+        <a href="#" target="_blank">CSS Grid</a>
+      </nav>
+    </header>
+    <article>
+      <header>
+        <p>Posted by <strong>Laura Jones</strong> on Monday, June 21st 2027</p>
+        <img src="./img/laura-jones.jpg" alt="Laura Jones" />
+        <br />
+        <img src="./img/post-img.jpg" alt="html" width="500" height="200" />
+      </header>
+
+      <p>
+        All modern websites and web applications are built using three
+        <i>fundamental</i> technologies: HTML, CSS and JavaScript. These are the
+        languages of the web. In this post, let's focus on HTML. We will learn
+        what HTML is all about, and why you too should learn it.
+      </p>
+
+      <h2>What is HTML?</h2>
+      <p>
+        HTML stands for <strong>H</strong>yper<strong>T</strong>ext
+        <strong>M</strong>arkup <strong>L</strong>anguage. It's a markup
+        language that web developers use to structure and describe the content
+        of a webpage (not a programming language). HTML consists of elements
+        that describe different types of content: paragraphs, links, headings,
+        images, video, etc. Web browsers understand HTML and render HTML code as
+        websites. In HTML, each element is made up of 3 parts:
+      </p>
+
+      <ol>
+        <li>The opening tag</li>
+        <li>The closing tag</li>
+        <li>The actual element</li>
+      </ol>
+
+      <p>
+        You can learn more at the
+        <a
+          href="https://developer.mozilla.org/en-US/docs/Web/HTML/Element/link"
+          target="_blank"
+          >MDN Web Docs.</a
+        >
+      </p>
+
+      <h2>Why should you learn HTML?</h2>
+      <p>
+        There are conutless reasons for learning the fundamental language of the
+        web. Here are 5 of them:
+      </p>
+      <ul>
+        <li>To be able to use the fundamental web dev language</li>
+        <li>
+          To hand-craft beautiful websites instead of relying on tools like
+          Worpress or Wix
+        </li>
+        <li>To build web applications</li>
+        <li>To impress friends</li>
+        <li>To have fun 😃</li>
+      </ul>
+
+      <p>Hopefully you learned something new here.See you nex time!</p>
+    </article>
+
+    <aside>
+      <h3>Related posts</h3>
+      <ul>
+        <li>
+          <img
+            src="./img/related-1.jpg"
+            alt="Learn web development"
+            width="100"
+            height="100"
+          />
+          <a href="#" target="_blank">How to learn web development</a>
+        </li>
+        <strong><p>By Jorge</p></strong>
+        <li>
+          <img
+            src="./img/related-2.jpg"
+            alt="Power of CSS"
+            width="100"
+            height="100"
+          />
+          <a href="#" target="_blank">The unknown powers of CSS</a>
+        </li>
+        <strong><p>By Jorge</p></strong>
+        <li>
+          <img
+            src="./img/related-3.jpg"
+            alt="Using Javascript"
+            width="100"
+            height="100"
+          />
+          <a href="#" target="_blank">Why Javascript is awesome</a>
+        </li>
+        <strong><p>By Jorge</p></strong>
+      </ul>
+    </aside>
+
+    <footer>Copyright &copy; 2022 by The Code Magazine.</footer>
   </body>
 </html>
 
@@ -15,5 +128,3 @@
 <!--//?-->
 <!--//*-->
 <!--TODO:-->
-
-<!--Testing the repo-->
