--- a/starter/02-HTML-Fundamentals/challenge#2.html
+++ b/starter/02-HTML-Fundamentals/challenge#2.html
@@ -4,16 +4,22 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="styles.css" />
     <title>Document</title>
   </head>
   <body>
     <header>
-      <h1>Converse Chuck Taylor All Star Low Top</h1>
-      <img src="./img/challenges.jpg" alt="A pair of shoes" />
+      <h1 class="title_background">Converse Chuck Taylor All Star Low Top</h1>
+      <img
+        src="./img/challenges.jpg"
+        alt="A pair of shoes"
+        width="300px"
+        height="300px"
+      />
     </header>
     <article>
-      <p><strong>$65.00</strong></p>
-      <br />
+      <p class="price_bold"><strong>$65.00</strong></p>
+      <h2>Free shipping</h2>
       <p>
         Ready to dress up or down, these classic canvas Chucks are an everyday
         wardrobe stample.
@@ -21,7 +27,7 @@
       <a href="#" target="_blank">More information &RightArrow;</a>
       <br />
       <h3>Product Details</h3>
-      <ul>
+      <ul class="bullet_style">
         <li>XS</li>
         <li>S</li>
         <li>M</li>
@@ -31,3 +37,5 @@
     </article>
   </body>
 </html>
+
+<!-- Challenge#2 -->
