--- a/starter/02-HTML-Fundamentals/index.html
+++ b/starter/02-HTML-Fundamentals/index.html
@@ -4,127 +4,42 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>The Basic Language of the Web: HTML</title>
+    <link rel="stylesheet" href="styles.css" />
+    <title>Document</title>
   </head>
-  <body>
-    <!--
-    <h1>The Basic Language of the Web: HTML</h1>
-    <h2>The Basic Language of the Web: HTML</h2>
-    <h3>The Basic Language of the Web: HTML</h3>
-    <h4>The Basic Language of the Web: HTML</h4>
-    <h5>The Basic Language of the Web: HTML</h5>
-    <h6>The Basic Language of the Web: HTML</h6>
--->
-    <h1>📘 The Code Magazine</h1>
-    <header>
-      <nav>
-        <a href="blog.html" target="_blank">Blog</a>
-        <a href="#" target="_blank">Challenges</a>
-        <a href="#" target="_blank">Flexbox</a>
-        <a href="#" target="_blank">CSS Grid</a>
-      </nav>
-    </header>
-    <article>
-      <header>
-        <p>Posted by <strong>Laura Jones</strong> on Monday, June 21st 2027</p>
-        <img src="./img/laura-jones.jpg" alt="Laura Jones" />
-        <br />
-        <img src="./img/post-img.jpg" alt="html" width="500" height="200" />
-      </header>
+  <div class="container">
+    <body>
+      <article class="product">
+        <h2 class="product-title">Converse Chuck Taylor All Star Low Top</h2>
+        <img
+          src="https://i.ibb.co/Jr7Wh1d/challenges.jpg"
+          alt="Chuck Taylor All Star Shoe"
+          height="250"
+          width="250"
+        />
 
-      <p>
-        All modern websites and web applications are built using three
-        <i>fundamental</i> technologies: HTML, CSS and JavaScript. These are the
-        languages of the web. In this post, let's focus on HTML. We will learn
-        what HTML is all about, and why you too should learn it.
-      </p>
+        <p class="price"><strong>$65.00</strong></p>
+        <p class="shipping">Free shipping</p>
+        <p>
+          Ready to dress up or down, these classic canvas Chucks are an everyday
+          wardrobe staple.
+        </p>
 
-      <h2>What is HTML?</h2>
-      <p>
-        HTML stands for <strong>H</strong>yper<strong>T</strong>ext
-        <strong>M</strong>arkup <strong>L</strong>anguage. It's a markup
-        language that web developers use to structure and describe the content
-        of a webpage (not a programming language). HTML consists of elements
-        that describe different types of content: paragraphs, links, headings,
-        images, video, etc. Web browsers understand HTML and render HTML code as
-        websites. In HTML, each element is made up of 3 parts:
-      </p>
-
-      <ol>
-        <li>The opening tag</li>
-        <li>The closing tag</li>
-        <li>The actual element</li>
-      </ol>
-
-      <p>
-        You can learn more at the
-        <a
-          href="https://developer.mozilla.org/en-US/docs/Web/HTML/Element/link"
-          target="_blank"
-          >MDN Web Docs.</a
+        <a class="more-info" href="https://www.converse.com"
+          >More information &rarr;</a
         >
-      </p>
 
-      <h2>Why should you learn HTML?</h2>
-      <p>
-        There are conutless reasons for learning the fundamental language of the
-        web. Here are 5 of them:
-      </p>
-      <ul>
-        <li>To be able to use the fundamental web dev language</li>
-        <li>
-          To hand-craft beautiful websites instead of relying on tools like
-          Worpress or Wix
-        </li>
-        <li>To build web applications</li>
-        <li>To impress friends</li>
-        <li>To have fun 😃</li>
-      </ul>
+        <h3 class="details-title">Product details</h3>
+        <ul class="details-list">
+          <li>Lightweight, durable canvas sneaker</li>
+          <li>Lightly padded footbed for added comfort</li>
+          <li>Iconic Chuck Taylor ankle patch</li>
+        </ul>
 
-      <p>Hopefully you learned something new here.See you nex time!</p>
-    </article>
-
-    <aside>
-      <h3>Related posts</h3>
-      <ul>
-        <li>
-          <img
-            src="./img/related-1.jpg"
-            alt="Learn web development"
-            width="100"
-            height="100"
-          />
-          <a href="#" target="_blank">How to learn web development</a>
-        </li>
-        <strong><p>By Jorge</p></strong>
-        <li>
-          <img
-            src="./img/related-2.jpg"
-            alt="Power of CSS"
-            width="100"
-            height="100"
-          />
-          <a href="#" target="_blank">The unknown powers of CSS</a>
-        </li>
-        <strong><p>By Jorge</p></strong>
-        <li>
-          <img
-            src="./img/related-3.jpg"
-            alt="Using Javascript"
-            width="100"
-            height="100"
-          />
-          <a href="#" target="_blank">Why Javascript is awesome</a>
-        </li>
-        <strong><p>By Jorge</p></strong>
-      </ul>
-    </aside>
-
-    <footer>Copyright &copy; 2022 by The Code Magazine.</footer>
-  </body>
+        <button class="add-cart">Add to cart</button>
+      </article>
+    </body>
+  </div>
 </html>
 
-<!--//!-->
-<!--//?-->
-<!--//*-->
-<!--TODO:-->
+<!-- Challenge#2 -->
