--- a/starter/02-HTML-Fundamentals/index.html
+++ b/starter/02-HTML-Fundamentals/index.html
@@ -17,7 +17,7 @@
           height="250"
           width="250"
         />
-
+        <p class="sale">sale</p>
         <p class="price"><strong>$65.00</strong></p>
         <p class="shipping">Free shipping</p>
         <p>
@@ -28,7 +28,14 @@
         <a class="more-info" href="https://www.converse.com"
           >More information &rarr;</a
         >
-
+        <div class="colors">
+          <div class="color"></div>
+          <div class="color color-blue"></div>
+          <div class="color color-red"></div>
+          <div class="color color-yellow"></div>
+          <div class="color color-green"></div>
+          <div class="color color-brown"></div>
+        </div>
         <h3 class="details-title">Product details</h3>
         <ul class="details-list">
           <li>Lightweight, durable canvas sneaker</li>
